--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tailwindcss": "^0.6.1",
     "vue-cli-plugin-fontawesome": "~0.2.0",
     "vue-cli-plugin-tailwindcss": "~0.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "websocket-extensions": ">=0.1.4"
   }
 }
